using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant
{
    public const string TAG_PLAYER = "Player";
    public const string TAG_BOT = "Bot";
    public const string TAG_BOT_COLLIDER = "BotCollider";
    public const string TAG_BRICK = "Brick";
    public const string TAG_DOOR = "Door";
    public const string TAG_GROUND = "Ground";


    public const string ANIM_IDLE = "idle";
    public const string ANIM_RUN = "run";
    public const string ANIM_FALL = "fall";
}
